testsuite/tests/typecheck/should_fail/T14761b.stderr

T14761b.hs:5:21: error:
    Strictness annotation applied to a compound type.
    Did you mean to add parentheses?
      !(Maybe Int)
